# serializer version: 1
# name: test_frame_when_before_hook_running_does_show_spinner
  '''
  iterate #1 · session test-session
  ├── ⠹ before hook
  ├── ○ prepare
  ├── ○ passes
  ├── ○ judge  3 metrics · geomean primary
  ├── ○ confirm  only if a gating metric regresses — reruns the suite
  └── ○ record  seq 1 · then after hook
  '''
# ---
# name: test_frame_when_both_worktrees_prepared_does_show_elapsed
  '''
  iterate #1 · session test-session
  ├── ✔ before hook
  ├── ✔ prepare (5s) candidate
  │   ├──   ✔ baseline (3s)
  │   └──   ✔ candidate (2s)
  ├── ○ passes
  ├── ○ judge  3 metrics · geomean primary
  ├── ○ confirm  only if a gating metric regresses — reruns the suite
  └── ○ record  seq 1 · then after hook
  '''
# ---
# name: test_frame_when_compact_layout_does_show_single_row
  '⠋ sample 1/5                              0% · A · 0:00:00 estimating time left…'
# ---
# name: test_frame_when_initial_does_show_all_nodes_pending
  '''
  iterate #3 · session abc-123
  ├── ○ before hook
  ├── ○ prepare
  ├── ○ passes
  ├── ○ judge  4 metrics · geomean primary
  ├── ○ confirm  only if a gating metric regresses — reruns the suite
  └── ○ record  seq 3 · then after hook
  '''
# ---
# name: test_frame_when_judge_alerting_and_confirm_running_does_show_bar
  '''
  iterate #1 · session test-session
  ├── ○ before hook
  ├── ○ prepare
  ├── ○ passes
  ├── ! judge +2.5% · regressed: latency
  ├── ⠹ confirm 1 metrics
  │   └──   0/10 (0%) estimating time left…
  └── ○ record  seq 1 · then after hook
  '''
# ---
# name: test_frame_when_judge_finished_does_show_delta_and_regressed
  '''
  iterate #1 · session test-session
  ├── ○ before hook
  ├── ✔ prepare
  │   └──   ✔ bench (0s)
  ├── ○ passes
  ├── ✔ judge -3.2% · regressed: latency, throughput
  ├── ○ confirm  only if a gating metric regresses — reruns the suite
  └── ○ record  seq 1 · then after hook
  '''
# ---
# name: test_frame_when_passes_mid_run_does_show_bar_eta_and_detail
  '''
  iterate #1 · session test-session
  ├── ○ before hook
  ├── ✔ prepare
  │   └──   ✔ bench (0s)
  ├── ⠹ passes
  │   ├──   2/10 (20%) ~1m 20s left
  │   └──   round 2 · baseline running · last pass 10s
  ├── ○ judge  3 metrics · geomean primary
  ├── ○ confirm  only if a gating metric regresses — reruns the suite
  └── ○ record  seq 1 · then after hook
  '''
# ---
# name: test_frame_when_recorded_improved_does_show_seq_and_outcome
  '''
  iterate #3 · session test-session
  ├── ○ before hook
  ├── ○ prepare
  ├── ○ passes
  ├── ○ judge  3 metrics · geomean primary
  ├── ○ confirm  only if a gating metric regresses — reruns the suite
  └── ✔ record seq 3 · improved
  '''
# ---
# name: test_frame_when_recorded_unsettled_does_not_duplicate_outcome
  '''
  iterate #2 · session test-session
  ├── ○ before hook
  ├── ○ prepare
  ├── ○ passes
  ├── ○ judge  3 metrics · geomean primary
  ├── ○ confirm  only if a gating metric regresses — reruns the suite
  └── ✔ record seq 2 · unsettled
  '''
# ---
# name: test_plain_when_confirm_finished_does_print_timestamped_line
  '[00:00:05] confirm reproduced'
# ---
# name: test_plain_when_judge_finished_does_print_timestamped_line
  '[00:00:00] judge -2.0%'
# ---
# name: test_plain_when_passes_done_does_print_timestamped_line
  '[00:00:00] prepare bench done (0s)'
# ---
# name: test_plain_when_prepare_done_does_print_timestamped_line
  '[00:00:00] prepare baseline done (5s)'
# ---
# name: test_plain_when_recorded_does_print_timestamped_line
  '[00:00:00] recorded seq 2 · improved'
# ---
